force-app/main/default/objects/Propulsion_Alert_Event__e/Propulsion_Alert_Event__e.object-meta.xml
<CustomObject>
    <label>Propulsion Alert Event</label>
    <pluralLabel>Propulsion Alert Events</pluralLabel>
</CustomObject>