force-app/main/default/objects/Propulsion_Alert_Event__e/fields/Equipment_ID__c.field-meta.xml
<CustomField>
    <fullName>Equipment_ID__c</fullName>
    <label>Equipment ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>