force-app/main/default/objects/Propulsion_Alert_Event__e/fields/Neutralization_Rate__c.field-meta.xml
<CustomField>
    <fullName>Neutralization_Rate__c</fullName>
    <label>Neutralization Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>